--- a/css/style.css
+++ b/css/style.css
@@ -126,4 +126,13 @@ img {
 
 /************************************************
     SOLUZIONE RESPONSIVE
- ************************************************/
+************************************************/
+
+/* versione tablet */
+@media screen and (max-width: 768px) {
+
+    .container {
+        width: 100%;
+    }
+
+}
