--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,34 @@ img {
     }
 
 }
+
+/* versione mobile */
+@media screen and (max-width: 480px) {
+
+    .row {
+        flex-direction: column;
+        gap: 60px;
+    }
+
+    .lessons .col,
+    .steps .col,
+    .why-us .col {
+        width: 100%;
+    }
+
+    .lessons,
+    .steps,
+    .why-us {
+        margin: 0;
+    }
+
+    section.lessons {
+        padding-bottom: 3rem;
+    }
+    
+    section.why-us {
+        background-color: #222222;
+        padding-top: 3rem;
+    }
+
+}
