--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,13 @@ img {
     }
 
 }
+
+/* bonus */
+@media screen and (min-width: 768px) and (max-width: 1140px) {
+
+    .container {
+        width: 100%;
+        max-width: 1140px;
+    }
+
+}
